# nilm

./: .gitignore  .gitmodules  README.md  detector.py  main.py  main_csv.py  main_csv_train.py  main_iris_tm.py  main_plot.py  main_redd_tm.py  pyproject.toml  redd_app_match.py  redd_edge_csv.py  redd_edge_plot.py  redd_main_match.py  redd_match_app.py  redd_match_main.py
arduino/: library.json  library.properties
arduino/examples/iris_inference/: iris_inference.ino
arduino/lime-tm/: keywords.txt
arduino/lime-tm/examples/iris_inference/: iris.c  iris.h  iris_inference.ino  iris_model.h  iris_test.h
arduino/lime-tm/src/: clause.c  clause.h  logging.h  tsetlin.h  tsetlin_model.h
arduino/src/: logging.h  tsetlin.c
docs/: CNAME  index.html
docs/css/: style.css
docs/js/: script.js  upload.js
docs/redd/: building_5_combined.csv
notebooks/: UK_DALE.ipynb  pyproject.toml
protobuf/: tsetlin.proto
tsetlin/: __init__.py  clause.py  tsetlin.py  tsetlin_pb2.py
tsetlin/compiler/: __init__.py  array.py  clause.py  clause_compressed.py  size.py  write.py
tsetlin/compiler/template/: tsetlin_structs.h.in
tsetlin/utils/: __init__.py  booleanize.py
